# UnchainedPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  version.rc.in
.github/workflows/: build.yml  ci.yml  release.yml
UnchainedPlugin/: CMakeLists.txt  builds.cpp  logging.cpp  main.cpp
UnchainedPlugin/Lib/MinHook/: CMakeLists.txt
UnchainedPlugin/include/: Chivalry2.h  FunctionHook.hpp  FunctionHookEnabler.hpp  StringUtil.h  UE4.h  adminControl.h  backendHooks.h  builds.h  commandline.cpp  logging.hpp  main.h  ownershipOverrides.h  sigs.h  unchainedIntegration.h
include/: FunctionHook.hpp  FunctionHookEnabler.hpp  Logging.hpp  UE4.h  adminControl.h  backendHooks.h  builds.h  constants.h  etcHooks.h  logging.hpp  main.h  unchainedIntegration.h
lib/MinHook/: CMakeLists.txt
lib/quill/include/quill/core/: Codec.h  MathUtilities.h
lib/tiny-json/: CMakeLists.txt
sleuth/: CMakeLists.txt  Cargo.toml  sleuthlib.rs
sleuth/sleuth_macros/: Cargo.toml
sleuth/sleuth_macros/src/: README.md  lib.rs
sleuth/src/: chiv2.rs  commands.rs  lib.rs  scan.rs  seh.rs  ue.rs  ue_old.rs
sleuth/src/discord/: Cargo.toml  config.rs  core.rs  macros.rs  mod.rs  notifications.rs  responses.rs
sleuth/src/discord/modules/: README.md  batcher.rs  chat_relay.rs  dashboard.rs  duel_manager.rs  herald.rs  killstreak.rs  map_vote.rs  mod.rs  stats_tracker.rs
sleuth/src/features/: commands.rs  discord_bot.rs  mod.rs  mod_management.rs  rcon.rs  server_registration.rs
sleuth/src/game/: chivalry2.rs  engine.rs  mod.rs  unchained.rs
sleuth/src/macros/: hook_macros.rs  mod.rs  patch_macros.rs  sig_macros.rs
sleuth/src/resolvers/: README.md  admin_control.rs  asset_loading.rs  asset_registry.rs  backend_hooks.rs  chiv2_macros.rs  etc_hooks.rs  getpost_requests.rs  hook_retour.rs  kismet_dev.rs  macros.rs  messages.rs  mod.rs  ownership_overrides.rs  rcon.rs  unchained_integration.rs
sleuth/src/tools/: cli_args.rs  hook_globals.rs  log_macros.rs  logger.rs  memtools.rs  misc.rs  mod.rs  pdb_scan.rs  registration.rs  server_registration.rs  syslog.rs
sleuth/src/ue/: array.rs  map.rs  mod.rs  name.rs  object.rs  string.rs
src/: Logging.cpp  Platform.hpp  StringUtil.h  UE4.h  builds.cpp  builds.h  builds.hpp  commandline.cpp  constants.h  logging.cpp  main.cpp  nettools.cpp  nettools.hpp  patch.cpp  patch.hpp  string_util.cpp  string_util.hpp
src/hooking/: AutoHook.hpp  FunctionHook.hpp  FunctionHookManager.hpp  HookData.hpp  Patch.hpp  PatchManager.hpp  SignatureHeuristic.hpp  heuristic_macros.hpp  hook_macros.hpp  patch_macros.hpp
src/hooking/heuristics/: all_heuristics.h  relative_procedure_call_heuristic.h
src/hooking/scanning/: SignatureScanner.hpp
src/hooks/: adminControl.h  admin_control.hpp  all_hooks.h  asset_loading.h  backendHooks.h  backend_hooks.h  etc_hooks.h  legacy_hooks.h  ownershipOverrides.h  ownership_overrides.h  unchainedIntegration.h  unchained_integration.h
src/legacy_hooks/: adminControl.h  backendHooks.h  etcHooks.h  legacy_hooks.h  ownershipOverrides.h  sigs.h
src/logging/: Logger.cpp  Logger.hpp  global_logger.cpp  global_logger.hpp
src/logging/formatters/: FilesystemPathFormatter.hpp  WStringFormatter.hpp  all_formatters.h
src/logging/sinks/: ConsoleSink.cpp  ConsoleSink.hpp  FileSink.cpp  FileSink.hpp  LogSink.hpp
src/patching/: Patch.hpp  PatchManager.hpp  patch_macros.hpp
src/state/: BuildMetadata.cpp  BuildMetadata.hpp  CLIArgs.cpp  CLIArgs.hpp  RCONState.hpp  State.hpp  global_state.cpp  global_state.hpp
src/stubs/: Chivalry2.h  UE4.h
