[package]
name = "sleuthlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = true
opt-level = 0
panic = "unwind"
lto = false
incremental = true

[profile.release]
debug = 2
opt-level = 3
panic = "unwind"
lto = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[features]
default = [
        "serde-resolvers",
        "dev",
        # "loose_assets",
        "verbose_hooks",
        "cli_commands",
        "rcon_commands",
        "server_registration",
        "mod_management",
        # "request_dummy_hooks",
        ]
serde-resolvers = []
image-elf = []
dev = []
syslog-client = []
request_dummy_hooks = [] # Enable Get*Post dummy hooks
kismet_log = [] # Dump kismetexecutionmessage logs
with_pdb = ["pdb"]
loose_assets = [] # Load assets in addition to paks
verbose_hooks = [] # print (some) hook triggers to console
cli_commands = [] # process commands from plugin windows
rcon_commands = [] # process commands from rcon
server_registration = ["a2s", "reqwest"] # register server with backend
mod_management = [] # info about mod markers and actors

[dependencies]
# patternsleuth = { git = "https://github.com/trumank/patternsleuth.git", rev = "5786164", features = ["process-internal", "serde-resolvers", "image-pe"] }
patternsleuth = { git = "https://github.com/Knutschbert/patternsleuth.git", rev = "644f980", features = ["process-internal", "serde-resolvers", "image-pe"] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7"
tracing = "0.1.40"
futures = "0.3.31"
once_cell = "1.19"
paste = "1.0"
memmap2 = "0.9.4"
widestring = "1.0.2"
bitflags = "2.4.1"
log = "0.4"
log4rs = "1.3.0"
simple-log = "1.6.0"
parking_lot = "0.12.1"
inventory = "0.3.14"
regex = "1.11"
ureq = "3.1.4"
itertools = "0.14.0"
# server registration
a2s = { path = "../../a2s-rs", optional = true }
reqwest = { version = "0.12.19", optional = true, features = ["blocking", "json"]  }
# pdb loading (local tests)
pdb = { version = "0.8.0", optional = true }
retour = { version = "0.3.1", features = ["static-detour"]}
clap = { version = "4.5.0", features = ["derive"] } # cli arg parsing
winapi = { version = "0.3.9", features = ["winnt", "wincrypt", "winuser"] }
windows = { version = "0.52.0", features = ["Win32_Foundation",
            "Win32_System_Console", 
            "Win32_System_LibraryLoader", 
            "Win32_System_SystemServices",
            "Win32_Graphics_Gdi", 
            "Win32_Graphics_Direct3D", 
            "Win32_Graphics_Direct3D11",
            "Win32_Graphics_Dxgi", 
            "Win32_Graphics_Dxgi_Common",
            "Win32_UI_WindowsAndMessaging",
            "Win32_System_Threading",

            "Win32_Security",
            "Win32_System_Kernel",
            "Win32_System_Memory",
            "Win32_System_ProcessStatus",
            ]}